Fix overflow and docked 0 content.

--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -4,6 +4,7 @@
 
 	.main {
 		flex-grow: 1;
+		min-width: 0;
 		display: flex;
 
 		> * {
